--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -21,6 +21,7 @@
     justify-content: flex-start;
     width: 30%;
     max-width: 250px;
+    min-width: 150px;
     height: 100%;
     padding: 1.5rem 2rem;
     background-image: url("../assets/bg-sidebar-desktop.svg");
@@ -35,8 +36,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 35px;
-        height: 35px;
+        width: 30px;
+        height: 30px;
         border: 1px solid var(--light-blue);
         border-radius: 50%;
         font-size: 1rem;
@@ -52,7 +53,7 @@
         letter-spacing: 1px;
 
         h1 {
-          font-size: .8rem;
+          font-size: .7rem;
           font-weight: 400;
           letter-spacing: -1px;
           color: var(--cool-gray);
@@ -62,7 +63,7 @@
         p {
           font-weight: 700;
           color: var(--light-gray);
-          font-size: .9rem;
+          font-size: .7rem;
         }
       }
 
@@ -107,6 +108,34 @@
           cursor: grab;
         }
       }
+
+      .button-prev {
+        padding: 0.8rem 1.2rem;
+        border: none;
+        background-color: var(--white);
+        color: var(--cool-gray);
+        font-size: 1rem;
+        font-weight: 700;
+
+        &:hover {
+          cursor: grab;
+        }
+      }
     }
+  }
+}
+
+.page__container {
+  width: 100%;
+  height: 100%;
+}
+
+.header {
+  width: 100%;
+  height: 20%;
+
+  p {
+    margin-top: 1rem;
+    color: var(--cool-gray);
   }
 }
