--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -24,7 +24,7 @@
     min-width: 150px;
     height: 100%;
     padding: 1.5rem 2rem;
-    background-image: url("../assets/bg-sidebar-desktop.svg");
+    background-image: url("../../assets/bg-sidebar-desktop.svg");
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
@@ -120,6 +120,15 @@
         &:hover {
           cursor: grab;
         }
+      }
+
+      .button-confirm {
+        padding: 0.8rem 1.6rem;
+        border-radius: 5px;
+        border: none;
+        background-color: var(--purplish-blue);
+        color: var(--white);
+        font-size: 1rem;
       }
     }
   }
