--- a/src/components/SelectPlan/SelectPlan.scss
+++ b/src/components/SelectPlan/SelectPlan.scss
@@ -4,11 +4,21 @@
   height: 80%;
   padding: 1rem 0;
 
+  @media screen and (max-width: 425px) {
+    height: 100%;
+    padding: 1rem 0rem;
+    border-radius: 0 0 10px 10px;
+  }
+
   .plan-options__items {
     display: grid;
     grid-auto-columns: minmax(0, 1fr);
     grid-auto-flow: column;
     grid-gap: 5%;
+
+    @media screen and (max-width: 425px) {
+      grid-auto-flow: row;
+    }
 
     .plan-options__item {
       display: flex;
@@ -18,12 +28,27 @@
       border: 1px solid var(--light-gray);
       border-radius: 10px;
 
+      @media screen and (max-width: 425px) {
+        justify-content: flex-start;
+        flex-direction: row;
+        padding: 1rem 1rem;
+      }
+
       .item__img {
         margin-bottom: 2rem;
+
+        @media screen and (max-width: 425px) {
+          margin-bottom: 0;
+          margin-right: 1rem;
+        }
       }
 
       .item__info {
         line-height: 1.5rem;
+
+        @media screen and (max-width: 425px) {
+          line-height: normal;
+        }
 
         h1 {
           font-size: 1rem;
@@ -32,6 +57,10 @@
         p {
           margin-top: 0.2rem;
           color: var(--cool-gray);
+
+          @media screen and (max-width: 425px) {
+            margin-top: 0;
+          }
         }
 
         .p__yearly-billings {
@@ -55,6 +84,11 @@
     margin-top: 2rem;
     background-color: var(--magnolia);
 
+    @media screen and (max-width: 425px) {
+      border-radius: 10px;
+      margin-top: 2.5rem;
+    }
+
     input[type="checkbox"] {
       position: relative;
       width: 40px;
@@ -64,6 +98,10 @@
       outline: none;
       border-radius: 20px;
       box-shadow: inset 0 0 5px rgba(255,255,255,.2);
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     input[type="checkbox"]:before {
